chore: update liberica `17.0.1-12` to `17.0.2-9`